Bug 624109: Deal with failing DXGI factory creation due to DLL injections. r=joedrew